# vesc_can_sdk

./: .flake8  .gdbinit  .gitignore  CAN_PROTOCOL.md  CMakeLists.txt  DEBUG_README.md  Kconfig  LICENSE  Makefile  README.arduino.md  README.md  README.zephyr.md  TODO.md  VERSION_README.md  test_example  vesc_buffer.c  vesc_can_sdk.c  vesc_can_sdk.h  vesc_can_sdk.pc.in  vesc_can_sdk_zephyr_config.h.in  vesc_crc.c
cmake/: vesc_can_sdkConfig.cmake.in
examples/: README.md  basic_control.c  controller_id_example.c  debug_example.c  linux_socketcan_example.c  simple_example.c  simple_python_example.py  version_example.c
include/: vesc_buffer.h  vesc_can_sdk.h  vesc_crc.h  vesc_version.h
python/: DASHBOARD_README.md  README.md  __init__.py  debug_with_gdb.py  requirements.txt  vesc_can_sdk.py  vesc_dashboard.py  vesc_monitor.py  vesc_shell.py
scripts/: README.md  check_vesc_updates.py  requirements.txt
zephyr/: module.yml
